discussion/kv_engine/125901/125901_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Add new Privilege failure for no privileges

Add a new failure code to privilege checks which lets the caller
distinguish between a failure because the privilege wasn't found and a
failure where not only is the privilege not found but the user has no
privileges for the scope/collection.

The differing failure is important for returning an appropriate error
code based on the following:

1) When a user has no privileges for the scope or collection, it
   makes the scope or collection invisible. Status::FailNoPrivileges
2) When a user has some privileges for a scope or collection, but not
   the requested privilege the scope/collection is visible and the
   current operation can be failed with a no access error. Status::Fail

Internally to the privilege database the following logic is used to
return Status::Fail or Status::FailNoPrivileges.

The Bucket counts how many privileges in its set are collection
privileges (the bucket can have both collection privileges e.g. Read
and non collection e.g. Audit)
  - A collection privilege at the Bucket means every collection in the
    system gets that privilege, e.g. Read := you can Read everything.
  - When Bucket::check cannot find a requested collection privilege and
    no scope/collection search is possible it decides the error using
    the count of collection privileges - the rule being, >0 privileges
    makes collections visible.

The Scope::check now accepts a new parameter, which is the number of
collection privileges found in the parent (the Bucket)
  - The Scope can itself have an empty privilege set in the case where
    it is just a conduit from Bucket to Collection.
  - If the Scope::check fails it uses the count of its own privileges
    and the count of the parent privileges to determine Fail or
    FailNoPrivileges.

The Collection::check is unchanged - the assumption is that the
Collection privilege set should not be empty (now checked in
construction)
  - With the set always storing at least one collection privilege, if
    you reach Collection::check the only error can be Fail.

Change-Id: I2c8c1cc7bf27a132bb522839f70239d9cff3f029

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-17 21:13:27.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-17 21:37:24.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27594/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\active_stream.cc(2016): error C2065: "producer": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27594/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1768/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/cookie.h:671:9: warning: use "= default" to define a trivial default constructor [modernize-use-equals-default]
        CurrentCollectionInfo() {
        ^                       ~
                                = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32: error: use of undeclared identifier "producer" [clang-diagnostic-error]
    if (filter.checkPrivileges(producer->getCookie(), *engine) !=
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1768/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1768/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23595/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23595/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3182/ : FAILURE

Compile error at [2020-04-17T21:23:27.228Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3182/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3198/ : FAILURE

Compile error at [2020-04-17T21:20:58.961Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3198/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11050/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2243/ : FAILURE

Compile error at [2020-04-17T21:15:12.794Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2243/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3260/ : FAILURE

Compile error at [2020-04-17T21:22:16.110Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3260/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/287/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
